entries visable and styled on main page

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,12 +1,12 @@
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Audiowide");
-$main-font: "Audiowide";
+$main-font: "Audiowide", Helvetica, sans-serif;
 
 @import url("https://fonts.googleapis.com/css?family=Glegoo");
-$article-text: "Glegoo";
+$article-text: "Glegoo", Times, serif;
 
 @import url("https://fonts.googleapis.com/css?family=Press+Start+2P");
-$accent-text: "Press Start 2P";
+$accent-text: "Press Start 2P", Helvetica, sans-serif;
 
 // colors
 $background-color: #343840;
@@ -22,3 +22,6 @@ $snes-purple: #4f43ae;
 $snes-blue: #b5b6e4;
 $snes-gray: #908a99;
 $snes-lite: #cec9cc;
+
+// size
+$hp-max-width: 1148px;
