--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,6 @@
+@import "./styles//base/reset.scss";
 @import "./styles/base/variables.scss";
-@import "./styles/components/test.scss";
+@import "./styles/base/main.scss";
+
+@import "./styles/components/navbar.scss";
+@import "./styles/components/entry_list_item.scss";
