entries are displaying, pagination working

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,4 @@
 
 @import "./styles/components/navbar.scss";
 @import "./styles/components/entry_list_item.scss";
+@import "./styles/components/pagination.scss";
