--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
-@import "./styles//base/reset.scss";
-@import "./styles/base/variables.scss";
-@import "./styles/base/main.scss";
+@import "./styles/base/reset";
+@import "./styles/base/variables";
+@import "./styles/base/extensions";
+@import "./styles/base/main";
 
-@import "./styles/components/navbar.scss";
-@import "./styles/components/entry_list_item.scss";
-@import "./styles/components/pagination.scss";
+@import "./styles/components/navbar";
+@import "./styles/components/entry_list";
+@import "./styles/components/entry_list_item";
+@import "./styles/components/pagination";
