about section displays properly

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,4 @@
 @import "./styles/components/entry_list";
 @import "./styles/components/entry_list_item";
 @import "./styles/components/pagination";
+@import "./styles/components/faq";
