added auth context, started setting up auth routes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "./styles/base/reset";
 @import "./styles/base/variables";
+@import "./styles/base/mixins";
 @import "./styles/base/extensions";
 @import "./styles/base/main";
 
@@ -8,3 +9,5 @@
 @import "./styles/components/entry_list_item";
 @import "./styles/components/pagination";
 @import "./styles/components/faq";
+@import "./styles/components/forms";
+@import "./styles/components/buttons";
