--- a/src/styles/base/_extensions.scss
+++ b/src/styles/base/_extensions.scss
@@ -4,3 +4,15 @@
   margin: 0.5em 0;
   padding: 8px;
 }
+
+%screen-reader {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  width: 1px;
+  overflow: hidden;
+  position: absolute !important;
+  word-wrap: normal !important;
+}
